# Application-Review

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  evaluator.py  models.py  pdf_parser.py  profiles.py  server.py
data/profiles/: 1a4dc97e-b5c2-414b-98bd-e19390350f31.json  272c7654-3298-4073-9b66-6dcc1d062a56.json  4278aa26-6767-497b-a85f-d01ec54f6549.json  88607760-5abf-421f-ba8e-487e81d35090.json  bd2ae4f8-b8df-4c0e-8109-d591e3df60c9.json
frontend/: app.js  index.html  style.css
sample_applications/jordan_patel/: Jordan Patel Application Answers.txt
sample_applications/maya_hernandez/: Maya Hernandez Application Answers.txt
sample_applications/tyler_brooks/: Tyler Brooks Application Answers.txt
