[project]
name = "application-review"
version = "0.1.0"
description = "AI-assisted application screening tool for internships and volunteer positions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pdfplumber>=0.11.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

